<resources>
    <string name="app_name">AmericanAirlinesPOC</string>
    <string name="login_appearence_title">American Airlines</string>
    <string name="hello">Hello</string>
    <string name="location">Location</string>
    <string name="user_id">A4_ID</string>
    <string name="password_hint">Password</string>


    <string name="user_id_empty">Please enter User Id</string>
    <string name="user_password_empty">Please enter Password</string>
    <string name="user_location_empty">Please enter Location</string>
    <string name="dialog_header">Location List</string>

    <string name="list_page_toolbar_title">Connect Me</string>
    <string name="list_page_toolbar_username">Cognizant User</string>
    <string name="list_page_toolbar_userrole">Associate</string>
    <string name="search_hint">Search by text</string>
    <string name="gates">Gates</string>
    <string name="topics">Topics</string>
    <string name="gate">Gate B</string>
</resources>
