<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewComponents.Activity.Login.LoginActivity">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10ssp"
        android:orientation="vertical"
        android:id="@+id/parent_ll"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/login_appearence_title"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/hello"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="italic"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:layout_marginBottom="@dimen/_20ssp"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_id_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_id"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/location_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_15ssp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_tv"
                    android:paddingLeft="@dimen/_5ssp"
                    android:hint="@string/location"
                    android:paddingBottom="@dimen/_5ssp"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1ssp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="@dimen/_100ssp"
                android:layout_height="@dimen/_40ssp"
                android:layout_marginTop="@dimen/_20ssp"
                android:text="Login"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>