<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/starter_toolbar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:gravity="start"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_dialog_alert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbar_header_tv"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4ssp"
                    android:layout_marginLeft="@dimen/_4ssp"
                    android:layout_toEndOf="@+id/imvLogo"
                    android:layout_toRightOf="@+id/imvLogo"
                    android:text="@string/list_page_toolbar_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/right_toolbar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4ssp"
                        android:layout_marginRight="@dimen/_4ssp"
                        android:layout_toStartOf="@+id/imvOption"
                        android:layout_toLeftOf="@+id/imvOption"
                        android:text="@string/list_page_toolbar_username"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvUserName"
                        android:layout_marginTop="@dimen/_2ssp"
                        android:layout_marginEnd="@dimen/_4ssp"
                        android:layout_marginRight="@dimen/_4ssp"
                        android:layout_toStartOf="@+id/imvOption"
                        android:layout_toLeftOf="@+id/imvOption"
                        android:text="@string/list_page_toolbar_userrole"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imvOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_menu_more" />
            </LinearLayout>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>