<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imvLogo"
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20ssp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imvLogo"
                android:layout_marginStart="@dimen/_4ssp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp"
                android:text="@string/list_page_toolbar_title"/>

            <ImageButton
                android:id="@+id/imvOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_menu_white"/>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imvOption"
                android:layout_marginEnd="@dimen/_4ssp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                android:text="@string/list_page_toolbar_username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imvOption"
                android:layout_marginEnd="@dimen/_4ssp"
                android:layout_below="@+id/tvUserName"
                android:layout_marginTop="@dimen/_2ssp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                android:text="@string/list_page_toolbar_userrole"/>

        </RelativeLayout>



    </android.support.v7.widget.Toolbar>-->
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />
    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp">

            <ImageView
                android:id="@+id/imvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_6ssp"
                android:src="@drawable/ic_search"
                android:layout_marginLeft="@dimen/_6ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imvSearch"
                android:layout_toStartOf="@+id/imvFilter"
                android:layout_marginStart="@dimen/_4ssp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorBlack"
                android:hint="@string/search_hint"
                android:textColorHint="@color/colorLightGray"
                android:textSize="@dimen/_14ssp"
                android:layout_marginLeft="@dimen/_4ssp"
                android:layout_toRightOf="@+id/imvSearch"
                android:layout_toLeftOf="@+id/imvFilter" />

            <ImageButton
                android:id="@+id/imvSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_6ssp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_settings"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_6ssp" />

            <ImageButton
                android:id="@+id/imvFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_6ssp"
                android:layout_toStartOf="@+id/imvSetting"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_filter"
                android:layout_marginRight="@dimen/_6ssp"
                android:layout_toLeftOf="@+id/imvSetting" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/searchbar"
        android:layout_above="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10ssp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/gates"
            android:textAllCaps="false"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/topics"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/_1ssp"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_1ssp" />


    </LinearLayout>

</LinearLayout>